# Land-Use

./: .gitignore  .readthedocs.yml  Area_type_classifications.py  Area_types_classification.py  Car Availability Adjustment.py  Land Use data prep.py  Main build hh and persons census segmentation.py  Mid-year population adjustments.py  NPRSegmentation.py  README.md  SIC_SOCManipulationMSOA.py  SICtoSOCmanipulation_MSOA.py  _normalisation_template.py  abp_processing_config-example.yml  abp_warehouse_config-example.yml  area_types_fy.py  base_employment.py  base_population.py  base_scotland_hh.py  environment.yml  gb_landuse.py  land_use_op_model.drawio  msoa_cd_id.csv  pyproject.toml  reformat_base_employment_input_data.py  reformat_base_population_input_data.py  reformat_base_population_validation_data.py  reporting.py  run_by_lu.py  run_fy_lu.py  run_fy_lu_DDG.py  run_fy_ntem.py  run_ipf_manchester.py  run_norcom.py  run_sector_report.py  run_zone_translation.py  sic_to_soc_fy.py  testing_environment.yml
TESTING/: base_population.py  generate_lsoa_cache.py  generate_msoa_cache.py  population_testing.py  reformat_input_data.py  table_functions.py  testing_environment.yml  util.py
docs/: base_model_structure.rst  conf.py  employment.rst  index.rst  land_use_op_model.html  population.rst  quick_start.rst  reference.rst  requirements.txt  revision_draft_op_model.drawio  write_segmentation_docs.py
land_use/: __init__.py  _normalisation_template.py  logging.py  lu_constants.py  setup.py  types.py  utils.py
norcom/: constants.py  requirements.txt  version.py
(+134 files in other folders)
